# Blog-Django-Project

./: .gitignore  README.md  blogmaker_lite.py  django_ormtest.py  generate_sample_data.py  manage.py  model_factory.py  pyproject.toml  requirements.txt  settings.py
accounts/: urls.py  views.py
accounts/templates/registration/: login.html  register.html
blogmaker_lite/: settings.py  urls.py  wsgi.py
blogs/: admin.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py  0002_blogpost.py  0003_blog_owner.py
blogs/templates/blogs/: base.html  blog.html  blogs.html  index.html  new_blog.html  new_post.html  post.html
css/: custom.css
djangoORMtest/: django_ormtest.py  setupdjangoORM.py
static/: chota copy.css  custom copy.css
